[gd_scene load_steps=3 format=3 uid="uid://rmal261gtlw0"]

[ext_resource type="Script" path="res://LvL1.gd" id="1_3tcvi"]
[ext_resource type="Texture2D" uid="uid://dfuksnaorepby" path="res://assets/Menu/JUEGO GATOS.png" id="1_5iavv"]

[node name="LvL1" type="Node2D"]
script = ExtResource("1_3tcvi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 323)
scale = Vector2(0.186435, 0.186286)
texture = ExtResource("1_5iavv")

[node name="ALCOBA" type="Button" parent="."]
offset_left = 502.0
offset_top = 169.0
offset_right = 899.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0, 0.529412, 1, 1)
theme_override_font_sizes/font_size = 50
flat = true
expand_icon = true

[node name="COMEDOR" type="Button" parent="."]
offset_left = 95.0
offset_top = 385.0
offset_right = 492.0
offset_bottom = 588.0
theme_override_colors/font_color = Color(0, 0.529412, 1, 1)
theme_override_font_sizes/font_size = 50
flat = true

[node name="SALA" type="Button" parent="."]
offset_left = 501.0
offset_top = 384.0
offset_right = 898.0
offset_bottom = 587.0
theme_override_colors/font_color = Color(0, 0.529412, 1, 1)
theme_override_font_sizes/font_size = 50
flat = true

[connection signal="mouse_entered" from="ALCOBA" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="ALCOBA" to="." method="change_cursor_back"]
[connection signal="pressed" from="ALCOBA" to="." method="_on_alcoba_pressed"]
[connection signal="mouse_entered" from="COMEDOR" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="COMEDOR" to="." method="change_cursor_back"]
[connection signal="pressed" from="COMEDOR" to="." method="_on_comedor_pressed"]
[connection signal="mouse_entered" from="SALA" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="SALA" to="." method="change_cursor_back"]
[connection signal="pressed" from="SALA" to="." method="_on_sala_pressed"]
